--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -18,6 +18,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		bzip2 \
 		unzip \
 		xz-utils \
+		#git \
+		#wget \
+		#curl \
+		#nano \
 	&& rm -rf /var/lib/apt/lists/*
 
 # Default to UTF-8 file.encoding
